[MSE] If src attribute is defined, ignore source alternative https://bugs.webkit.org/show_bug.cgi?id=274195 rdar://128098363

Reviewed by Youenn Fablet and Eric Carlson.

Per spec, if a media element has a src attribute defined, `<source>` alternative are ignored.
As such we should ignore the presence of the source children if a src attribute is set to determine
if the ManagedMediaSource is in open state.

* LayoutTests/media/media-source/media-managedmse-airplay-expected.txt:
* LayoutTests/media/media-source/media-managedmse-airplay-withsrc-expected.txt: Added.
* LayoutTests/media/media-source/media-managedmse-airplay-withsrc.html: Copied from LayoutTests/media/media-source/media-managedmse-airplay.html.
* LayoutTests/media/media-source/media-managedmse-airplay.html:
* LayoutTests/platform/glib/TestExpectations:
* LayoutTests/platform/ios/TestExpectations:
* Source/WebCore/html/HTMLMediaElement.cpp:
(WebCore::HTMLMediaElement::hasWirelessPlaybackTargetAlternative const):

Canonical link: https://commits.webkit.org/278834@main